--- a/index.html
+++ b/index.html
@@ -22,70 +22,146 @@
 
 <body>
     <header>
-        <h1 id="logo">FinaNção</h1>
+        <img src="./assets/logo.svg" alt="Logo FinaNção">
     </header>
 
     <main class="container">
         <section id="balance">
-            <h2>Balanço</h2>
+            <h2 class="sr-only">Balanço</h2>
+
             <div class="card">
-                <h3>Entradas</h3>
+                <h3>
+                    <span>Entradas</span>
+                    <img src="./assets/income.svg" alt="Images de entradas">
+                </h3>
                 <p>R$ 4.000,00 </p>
             </div>
+
             <div class="card">
-                <h3>Saídas</h3>
-                <p>R$ 727,00 </p>
+                <h3>
+                    <span>Saídas</span>
+                    <img src="./assets/expense.svg" alt="Imagens de saídas">
+                </h3>
+                <p>R$ 1627,00 </p>
             </div>
+
             <div class="card total">
-                <h3>Total</h3>
+                <h3>
+                    <span>Total</span>
+                    <img src="./assets/total.svg" alt="Resultado total">
+                </h3>
                 <p>R$ 2.373,00 </p>
             </div>
         </section>
 
         <section id="transactions">
-            <h2>Transações</h2>
+            <h2 class="sr-only">Transações</h2>
+
+            <a href="#" onclick="Modal.open( )" class="button new">+ Nova Transação</a>
+
             <table id="data-table">
                 <thead>
                     <tr>
                         <th>Descrição</th>
                         <th>Valor</th>
                         <th>Data</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="description">Luz</td>
+                        <td class="date">Luz</td>
                         <td class="expense">- R$ 350,00</td>
                         <td class="date">20/3/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover Transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Água</td>
                         <td class="expense">- R$ 127,00</td>
                         <td class="date">20/3/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover Transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Internet/TV</td>
                         <td class="expense">- R$ 250,00</td>
                         <td class="date">20/3/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover Transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Desenvolvimendo de site</td>
                         <td class="income">R$ 4.000,00</td>
                         <td class="date">05/3/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover Transação">
+                        </td>
                     </tr>
                     <tr>
                         <td class="description">Aluguel</td>
                         <td class="expense">- R$ 900,00</td>
                         <td class="date">05/3/2021</td>
+                        <td>
+                            <img src="./assets/minus.svg" alt="Remover Transação">
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
 
+    <div class="modal-overlay">
+        <div class="modal">
+            <div id="form">
+                <h2>Nova Transação</h2>
+                <form active="">
+                    <div class="input-group">
+                        <label class="sr-only" for="description">Descrição</label>
+                        <input type="text" id="description" name="description" placeholder="Descrição" />
+                    </div>
+
+                    <div class="input-group">
+                        <label class="sr-only" for="amount">Valor</label>
+                        <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
+                        <small class="help">Use o sinal - (negativo) para despesas e , (virgula) para casas decimais.
+                        </small>
+                    </div>
+
+                    <div class="input-group">
+                        <label class="sr-only" for="date">Data</label>
+                        <input type="date" id="date" name="date" />
+                    </div>
+
+                    <div class="input-group actions">
+                        <a href="#" onclick="Modal.close( )" class="button cancel">Cancelar</a>
+                        <button>Salvar</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
+
     <footer>
         <p>FinaNção$Enterprise</p>
+        <p>2021</p>
     </footer>
+
+
+    <script>
+        const Modal = {
+            open() {
+                document.querySelector('.modal-overlay').classList.add('active')
+            },
+            close() {
+                document.querySelector('.modal-overlay').classList.remove('active')
+            },
+        }
+    </script>
 </body>
 
 </html>
