--- a/index.html
+++ b/index.html
@@ -2,27 +2,20 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FinaNção</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>dev.finance$</title>
 
     <link rel="stylesheet" href="./styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <img src="./assets/logo.svg" alt="Logo FinaNção">
+        <img src="./assets/logo.svg" alt="Logo Dev Finance">
     </header>
 
     <main class="container">
@@ -31,33 +24,40 @@
 
             <div class="card">
                 <h3>
-                    <span>Entradas</span>
-                    <img src="./assets/income.svg" alt="Images de entradas">
+                    <span>
+                        Entradas
+                    </span>
+                    <img src="./assets/income.svg" alt="Image de entradas">
                 </h3>
-                <p>R$ 4.000,00 </p>
+                <p id="incomeDisplay">R$ 0,00</p>
             </div>
 
             <div class="card">
                 <h3>
-                    <span>Saídas</span>
-                    <img src="./assets/expense.svg" alt="Imagens de saídas">
+                    <span>
+                        Saídas
+                    </span>
+                    <img src="./assets/expense.svg" alt="Image de saídas">
                 </h3>
-                <p>R$ 1627,00 </p>
+                <p id="expenseDisplay">R$ 0,00</p>
             </div>
 
             <div class="card total">
                 <h3>
-                    <span>Total</span>
-                    <img src="./assets/total.svg" alt="Resultado total">
+                    <span>
+                        Total
+                    </span>
+                    <img src="./assets/total.svg" alt="Image de total">
                 </h3>
-                <p>R$ 2.373,00 </p>
+                <p id="totalDisplay">R$ 0,00</p>
             </div>
+
         </section>
 
-        <section id="transactions">
+        <section id="transaction">
             <h2 class="sr-only">Transações</h2>
 
-            <a href="#" onclick="Modal.open( )" class="button new">+ Nova Transação</a>
+            <a href="#" onclick="Modal.open()" class="button new">+ Nova Transação</a>
 
             <table id="data-table">
                 <thead>
@@ -69,46 +69,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="date">Luz</td>
-                        <td class="expense">- R$ 350,00</td>
-                        <td class="date">20/3/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Água</td>
-                        <td class="expense">- R$ 127,00</td>
-                        <td class="date">20/3/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Internet/TV</td>
-                        <td class="expense">- R$ 250,00</td>
-                        <td class="date">20/3/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Desenvolvimendo de site</td>
-                        <td class="income">R$ 4.000,00</td>
-                        <td class="date">05/3/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="description">Aluguel</td>
-                        <td class="expense">- R$ 900,00</td>
-                        <td class="date">05/3/2021</td>
-                        <td>
-                            <img src="./assets/minus.svg" alt="Remover Transação">
-                        </td>
-                    </tr>
                 </tbody>
             </table>
         </section>
@@ -118,7 +78,7 @@
         <div class="modal">
             <div id="form">
                 <h2>Nova Transação</h2>
-                <form active="">
+                <form action="" onsubmit="Form.submit(event)">
                     <div class="input-group">
                         <label class="sr-only" for="description">Descrição</label>
                         <input type="text" id="description" name="description" placeholder="Descrição" />
@@ -127,8 +87,8 @@
                     <div class="input-group">
                         <label class="sr-only" for="amount">Valor</label>
                         <input type="number" step="0.01" id="amount" name="amount" placeholder="0,00" />
-                        <small class="help">Use o sinal - (negativo) para despesas e , (virgula) para casas decimais.
-                        </small>
+                        <small class="help">Use o sinal - (negativo) para despesas e , (vírgula) para casas
+                            decimais</small>
                     </div>
 
                     <div class="input-group">
@@ -137,31 +97,19 @@
                     </div>
 
                     <div class="input-group actions">
-                        <a href="#" onclick="Modal.close( )" class="button cancel">Cancelar</a>
+                        <a onclick="Modal.close()" href="#" class="button cancel">Cancelar</a>
                         <button>Salvar</button>
                     </div>
-
                 </form>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>FinaNção$Enterprise</p>
-        <p>2021</p>
+        <p>finanção$enterprise2021</p>
     </footer>
 
-
-    <script>
-        const Modal = {
-            open() {
-                document.querySelector('.modal-overlay').classList.add('active')
-            },
-            close() {
-                document.querySelector('.modal-overlay').classList.remove('active')
-            },
-        }
-    </script>
+    <script src="./scripts.js"></script>
 </body>
 
 </html>
